1-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: default
  labels:
    app: ghost
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: website
          image: ghost:5.48-alpine
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 2368
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ghost/api/admin/site/
              port: http
              httpHeaders:
              - name: X-Forwarded-Proto
                value: https
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /ghost/api/admin/site/
              port: http
              httpHeaders:
              - name: X-Forwarded-Proto
                value: https
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '150m'
          volumeMounts:
          - name: ghost
            mountPath: /var/lib/ghost/content

      volumes:
        - name: ghost
          persistentVolumeClaim:
            claimName: ghost
