2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: default
  labels:
    app: ghost
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ghost
